--- a/templates/openstackconfiggenerator/config/17.0/nic/multiple_nics_dvr.j2
+++ b/templates/openstackconfiggenerator/config/17.0/nic/multiple_nics_dvr.j2
@@ -18,9 +18,10 @@ network_config:
   dns_servers: {{ ctlplane_dns_nameservers }}
   domain: {{ dns_search_domains }}
   routes:
-  - ip_netmask: 0.0.0.0/0
+{% if 'External' not in role_networks %}
+  - default: true
     next_hop: {{ ctlplane_gateway_ip }}
-    default: true
+{% endif %}
   use_dhcp: false
   addresses:
   - ip_netmask: {{ ctlplane_ip }}/{{ ctlplane_subnet_cidr }}
