--- a/templates/openstackconfiggenerator/config/17.0/nic/multiple_nics_dvr.j2
+++ b/templates/openstackconfiggenerator/config/17.0/nic/multiple_nics_dvr.j2
@@ -17,11 +17,7 @@ network_config:
   mtu: {{ ctlplane_mtu }}
   dns_servers: {{ ctlplane_dns_nameservers }}
   domain: {{ dns_search_domains }}
-  routes:
-{% if 'External' not in role_networks %}
-  - default: true
-    next_hop: {{ ctlplane_gateway_ip }}
-{% endif %}
+  routes: {{ ctlplane_host_routes }}
   use_dhcp: false
   addresses:
   - ip_netmask: {{ ctlplane_ip }}/{{ ctlplane_subnet_cidr }}
